<resources>
    <string name="app_name">Atividade2</string>

    <string name="nome_usuario">Nome</string>
    <string name="idade_usuario">Idade</string>
    <string name="email_usuario">Email</string>
    <string name="sexo_usuario">Sexo</string>
    <string name="sexo_m">Masculino</string>
    <string name="sexo_f">Feminino</string>
    <string name="button_limpar">Limpar</string>
    <string name="button_salvar">Salvar</string>

</resources>
