<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.fabio.atividade2.MainActivity">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_usuario" />
    <EditText
        android:id="@+id/nome_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_usuario"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/email_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha_usuario"/>

    <EditText
        android:id="@+id/senha_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>


    <RadioGroup
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sexo_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo_m"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/sexo_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sexo_f"/>
    </RadioGroup>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_limpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_limpar"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            />
        <Button
            android:id="@+id/button_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_salvar"
            android:layout_weight="1"/>

    </LinearLayout>




</LinearLayout>
