<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.fabio.atividade2.Main2Activity"
    >


    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_usuario" />
    <EditText
        android:id="@+id/nome_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_usuario"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/email_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idade_usuario"/>
    <EditText
        android:id="@+id/idade_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>


    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo_usuario"/>
    <EditText
        android:id="@+id/sexo_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />



</LinearLayout>
